--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web page</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
     <div id="container">
@@ -25,7 +25,7 @@
         <div class="shop-content">
           <div class="food-box">
             <div class="pic">
-              <img  src="../images/Burger King Whopper.jpg" alt="image1" />
+              <img  src="images/Burger King Whopper.jpg" alt="image1" />
             </div>
             <h2>Burger king Whopper</h2>
             <span class="food-price">Rs 125</span>
@@ -33,7 +33,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Domino's Pepperoni Pizza.jpg" alt="image2" />
+              <img src="images/Domino's Pepperoni Pizza.jpg" alt="image2" />
             </div>
             <h2>Domino's Pepperoni pizza</h2>
             <span class="food-price">Rs 579</span>
@@ -42,7 +42,7 @@
           <div class="food-box">
             <div class="pic">
               <img
-                src="../images/Green Burrito's Chicken Burrito.jpg"
+                src="images/Green Burrito's Chicken Burrito.jpg"
                 alt="image1"
               />
             </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Guthrie's Chicken Fingers.jpg" alt="image1" />
+              <img src="images/Guthrie's Chicken Fingers.jpg" alt="image1" />
             </div>
             <h2>Guthrie's Chicken Fingers</h2>
             <span class="food-price">Rs 275</span>
@@ -61,7 +61,7 @@
           <div class="food-box">
             <div class="pic">
               <img
-                src="../images/Little Caesar's Crazy Bread.jpg"
+                src="images/Little Caesar's Crazy Bread.jpg"
                 alt="image1"
               />
             </div>
@@ -71,7 +71,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Rita's Italian Ice.jpg" alt="image1" />
+              <img src="images/Rita's Italian Ice.jpg" alt="image1" />
             </div>
             <h2>Rita's Italian Ice</h2>
             <span class="food-price">Rs 399</span>
@@ -80,7 +80,7 @@
           <div class="food-box">
             <div class="pic">
               <img
-                src="../images/Long John Silver's Hush Puppies.jpg"
+                src="images/Long John Silver's Hush Puppies.jpg"
                 alt="image1"
               />
             </div>
@@ -90,7 +90,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Nando's Peri Peri Chicken.jpg" alt="image1" />
+              <img src="images/Nando's Peri Peri Chicken.jpg" alt="image1" />
             </div>
             <h2>Nando's Peri Peri Chicken</h2>
             <span class="food-price">Rs 419</span>
@@ -99,7 +99,7 @@
           <div class="food-box">
             <div class="pic">
               <img
-                src="../images/Panera Toasted Steak & White Cheddar.jpg"
+                src="images/Panera Toasted Steak & White Cheddar.jpg"
                 alt="image1"
               />
             </div>
@@ -109,7 +109,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Papa John's Cheese Pizza.jpg" alt="image1" />
+              <img src="images/Papa John's Cheese Pizza.jpg" alt="image1" />
             </div>
             <h2>Papa John's Cheese Pizza</h2>
             <span class="food-price">Rs 345</span>
@@ -117,7 +117,7 @@
           </div>
           <div class="food-box">
             <div class="pic">
-              <img src="../images/Raising Cane's Box Combo.jpg" alt="image1" />
+              <img src="images/Raising Cane's Box Combo.jpg" alt="image1" />
             </div>
             <h2>Raising Cane's Box Combo</h2>
             <span class="food-price">Rs 977</span>
@@ -126,7 +126,7 @@
           <div class="food-box">
             <div class="pic">
               <img
-                src="../images/Schlotzsky's the Original Sandwich.jpg"
+                src="images/Schlotzsky's the Original Sandwich.jpg"
                 alt="image1"
               />
             </div>
